--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md
 include LICENSE
-recursive-include friction/ *.wsgi
+include friction/application.wsgi
 recursive-include friction/static *.css *.js *.svg *.gif *.png LICENSE
 recursive-include friction/templates *.html
